syntax = "proto3";

package com.downvoteit.springproto;

option java_multiple_files = true;
option java_package = "com.downvoteit.springproto";

enum CategoryProto {
  UNDEFINED = 0;
  PRIMARY = 1;
  SECONDARY = 2;
  TERTIARY = 3;
}

message ItemReqProto {
  int32 id = 1;
  CategoryProto categoryId = 2;
  string name = 3;
  int32 amount = 4;
  double price = 5;
}

message ItemReqNameProto {
  int32 categoryId = 1;
  string name = 2;
}

message ItemReqsProto {
  repeated ItemReqProto items = 1;
}

message PagedReqProto {
  int32 page = 1;
  int32 limit = 2;
}

message ReqProto {
  int32 id = 1;
}

message ResProto {
  int32 id = 1;
  string message = 2;
}
